--- a/projects/KinectV2_vs2013/KinectV2_vs2013.vcxproj
+++ b/projects/KinectV2_vs2013/KinectV2_vs2013.vcxproj
@@ -35,21 +35,34 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\srcs;$(KINECTSDK20_DIR)\inc;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\opencv_2.4.10\build\include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+        $(SolutionDir)..\srcs;
+        $(KINECTSDK20_DIR)\inc;
+        $(SIGBUILD_BOOST_INC);
+        $(OPENCV_ROOT)\include;
+        $(SIGBUILD_SIGSERVICE_INC);
+        %(AdditionalIncludeDirectories)
+      </AdditionalIncludeDirectories>
       <PreprocessorDefinitions>DEBUG_PRINT;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(KINECTSDK20_DIR)\Lib\x86;C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-12.0;C:\SIGVerse\ext\opencv_2.4.10\build\x86\vc12\lib;C:\SIGVerse\GitHub\SIGService\Windows\Release_2013;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SIGService.lib;kinect20.lib;opencv_highgui2410.lib;opencv_core2410.lib;opencv_imgproc2410.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>
+        $(KINECTSDK20_DIR)\Lib\x86;
+        $(SIGBUILD_BOOST_LIB);
+        $(OPENCV_ROOT)\lib\Release;
+        $(SIGBUILD_SIGSERVICE_LIB);
+        %(AdditionalLibraryDirectories)
+      </AdditionalLibraryDirectories>
+      <AdditionalDependencies>SIGService.lib;kinect20.lib;opencv_highgui2413.lib;opencv_core2413.lib;opencv_imgproc2413.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy ".\KinectV2.ini" "..\Release"
-copy "C:\SIGVerse\ext\opencv_2.4.10\build\x86\vc12\bin\opencv_core2410.dll" "..\Release"
-copy "C:\SIGVerse\ext\opencv_2.4.10\build\x86\vc12\bin\opencv_highgui2410.dll" "..\Release"
-copy "C:\SIGVerse\ext\opencv_2.4.10\build\x86\vc12\bin\opencv_imgproc2410.dll" "..\Release"
+copy "$(OPENCV_ROOT)\bin\Release\opencv_core2413.dll" "..\Release"
+copy "$(OPENCV_ROOT)\bin\Release\opencv_highgui2413.dll" "..\Release"
+copy "$(OPENCV_ROOT)\bin\Release\opencv_imgproc2413.dll" "..\Release"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
