--- a/projects/PerceptionNeuron_vs2013/PerceptionNeuron_vs2013.vcxproj
+++ b/projects/PerceptionNeuron_vs2013/PerceptionNeuron_vs2013.vcxproj
@@ -36,19 +36,32 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\srcs;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;C:\SIGVerse\ext\NeuronDataReader_SDK_b15\Windows\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+        $(SolutionDir)..\srcs;
+        $(SIGBUILD_BOOST_INC);
+        $(SIGBUILD_SIGSERVICE_INC);
+        $(SIGBUILD_NEURONDATAREADER_INC);
+        %(AdditionalIncludeDirectories)
+      </AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-12.0;C:\SIGVerse\GitHub\SIGService\Windows\Release_2013;C:\SIGVerse\ext\NeuronDataReader_SDK_b15\Windows\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>
+        $(SIGBUILD_BOOST_LIB);
+        $(SIGBUILD_SIGSERVICE_LIB);
+        $(SIGBUILD_NEURONDATAREADER_LIB);
+        %(AdditionalLibraryDirectories)
+      </AdditionalLibraryDirectories>
       <AdditionalDependencies>SIGService.lib;NeuronDataReader.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy ".\PerceptionNeuron.ini" "..\Release"
-copy "C:\SIGVerse\ext\NeuronDataReader_SDK_b15\Windows\lib\x86\NeuronDataReader.dll" "..\Release"</Command>
+      <Command>
+        copy ".\PerceptionNeuron.ini" "..\Release"
+        copy %SIGBUILD_NEURONDATAREADER_LIB%\NeuronDataReader.dll "..\Release"
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
