--- a/projects/Myo_vs2013/Myo_vs2013.vcxproj
+++ b/projects/Myo_vs2013/Myo_vs2013.vcxproj
@@ -36,19 +36,32 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\srcs;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;C:\SIGVerse\ext\myo-sdk-win-0.9.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+        $(SolutionDir)..\srcs;
+        $(SIGBUILD_BOOST_INC);
+        $(SIGBUILD_SIGSERVICE_INC);
+        $(MYO_SDK_ROOT)\include;
+        %(AdditionalIncludeDirectories)
+      </AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-12.0;C:\SIGVerse\GitHub\SIGService\Windows\Release_2013;C:\SIGVerse\ext\myo-sdk-win-0.9.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>
+        $(SIGBUILD_BOOST_LIB);
+        $(SIGBUILD_SIGSERVICE_LIB);
+        $(MYO_SDK_ROOT)\lib;
+        %(AdditionalLibraryDirectories)
+      </AdditionalLibraryDirectories>
       <AdditionalDependencies>SIGService.lib;myo32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy ".\Myo.ini" "..\Release"
-copy "C:\SIGVerse\ext\myo-sdk-win-0.9.0\bin\myo32.dll" "..\Release"</Command>
+      <Command>
+        copy ".\Myo.ini" "..\Release"
+        copy "$(MYO_SDK_ROOT)\bin\myo32.dll" "..\Release"
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
