--- a/projects/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj
+++ b/projects/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj
@@ -35,13 +35,24 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\srcs;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+        $(SolutionDir)..\srcs;
+        $(SIGBUILD_BOOST_INC);
+        $(SIGBUILD_LIBOVR_INC);
+        $(SIGBUILD_SIGSERVICE_INC);
+        %(AdditionalIncludeDirectories)
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Lib\Win32\VS2010;C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>
+        $(SIGBUILD_BOOST_LIB);
+        $(SIGBUILD_LIBOVR_LIB);
+        $(SIGBUILD_SIGSERVICE_LIB);
+        %(AdditionalLibraryDirectories)
+      </AdditionalLibraryDirectories>
       <AdditionalDependencies>ws2_32.lib;libovr.lib;winmm.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
