Update post-build step for PerceptionNeuron Service

--- a/projects/PerceptionNeuron_vs2013/PerceptionNeuron_vs2013.vcxproj
+++ b/projects/PerceptionNeuron_vs2013/PerceptionNeuron_vs2013.vcxproj
@@ -60,7 +60,7 @@
     <PostBuildEvent>
       <Command>
         copy ".\PerceptionNeuron.ini" "..\Release"
-        copy %SIGBUILD_NEURONDATAREADER_LIB%\NeuronDataReader.dll "..\Release"
+        copy "$(SIGBUILD_NEURONDATAREADER_LIB)\NeuronDataReader.dll" "..\Release"
       </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
